--- a/Front-end/src/Pages/Perfil/perfil.css
+++ b/Front-end/src/Pages/Perfil/perfil.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Open+Sans:wght@400;600&display=swap');
 /* Layout Wrapper */
 .perfil-wrapper {
     max-width: 1000px;
