--- a/Front-end/src/Pages/SobreNos/sobre.css
+++ b/Front-end/src/Pages/SobreNos/sobre.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Open+Sans:wght@400;600&display=swap');
 /* SEÇÃO SOBRE NÓS */
 .sobre-nos-section {
     text-align: center;
